force-app/main/default/objects/Log_Form__c/Log_Form__c.object-meta.xml
<CustomObject>
    <description>Objeto log para registrar los errores del formulario Portal Pacientes</description>
    <label>Error de Registro</label>
    <nameField>
        <label>Nombre de Log Form</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Errores de Registro</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>