force-app/main/default/objects/Log_Form__c/fields/Comentario__c.field-meta.xml
<CustomField>
    <fullName>Comentario__c</fullName>
    <description>Comentario con error amigable para el PSP</description>
    <label>Comentario</label>
    <type>TextArea</type>
</CustomField>