force-app/main/default/objects/Log_Form__c/fields/Datos_de_Paciente__c.field-meta.xml
<CustomField>
    <fullName>Datos_de_Paciente__c</fullName>
    <description>Datos principales de pacientes</description>
    <label>Datos de Paciente</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>