force-app/main/default/objects/Log_Form__c/fields/Error__c.field-meta.xml
<CustomField>
    <fullName>Error__c</fullName>
    <description>Error de Salesforce</description>
    <label>Error</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>