force-app/main/default/objects/Log_Form__c/fields/Objeto_Fallido__c.field-meta.xml
<CustomField>
    <fullName>Objeto_Fallido__c</fullName>
    <description>Objeto donde ocurrió el error</description>
    <label>Objeto Fallido</label>
    <type>TextArea</type>
</CustomField>