force-app/main/default/objects/Log_Form__c/fields/Paciente__c.field-meta.xml
<CustomField>
    <fullName>Paciente__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Paciente de solicitud de kit fallido</description>
    <label>Paciente</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Logs_Form</relationshipName>
    <type>Lookup</type>
</CustomField>