force-app/main/default/objects/Log_Form__c/fields/Registro__c.field-meta.xml
<CustomField>
    <fullName>Registro__c</fullName>
    <description>Registro fallido</description>
    <label>Registro</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>